Icons and Logos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Golden Gate Listings - Clear English Product Listings for Global Sales</title>
     <meta name="description"
         content="Professional English editing for Chinese manufacturers. We fix product listings and infographics to increase trust and sales.">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,9 +18,13 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
+            <div class="hero-logo">
+                <img src="logo.png" alt="Golden Gate Listings">
+            </div>
             <div class="hero-content">
                 <h1>Clear English Product Listings for Global Sales</h1>
                 <h2>Professional English Editing for Chinese Manufacturers</h2>
+                <p class="hero-chinese">为中国企业提供专业的英文产品信息修改服务</p>
                 <p>We fix product descriptions and infographics.</p>
                 <p>Make your listings clear, professional, and ready for international buyers.</p>
                 <a href="#contact" class="cta-button">Get a Free Review</a>
